# axiam-rust-sdk

./: .gitignore  CHANGELOG.md  CONTRACT.md  Cargo.toml  README.md  buf.gen.yaml  build.rs
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: coverage.yml  rust-clippy.yml  sdk-ci-rust.yml
axiam-sdk-macros/: Cargo.toml  README.md
axiam-sdk-macros/src/: lib.rs
examples/: actix_route_guard.rs  amqp_consumer.rs  grpc_check_access.rs  login_mfa.rs  rest_check_access.rs
src/: client.rs  error.rs  lib.rs  sensitive.rs  url_guard.rs
src/amqp/: consumer.rs  hmac.rs  messages.rs  mod.rs
src/grpc/: channel.rs  client.rs  interceptor.rs  mod.rs  userinfo.rs
src/middleware/: actix.rs  authz.rs  mod.rs
src/rest/: auth.rs  authz.rs  mod.rs
src/token/: jwks.rs  manager.rs  mod.rs  refresh_guard.rs
tests/: actix_extractor_test.rs  amqp_hmac_test.rs  client_builder_branches_test.rs  error_mapping_test.rs  grpc_channel_test.rs  grpc_check_access_test.rs  grpc_gen_codegen_test.rs  grpc_interceptor_test.rs  grpc_token_user_service_test.rs  grpc_user_info_test.rs  jwks_fetch_and_refetch_test.rs  jwks_single_flight_test.rs  jwks_verify_branches_test.rs  login_mfa_flow_test.rs  macro_require_access_test.rs  mtls_client_cert_test.rs  refresh_guard_branches_test.rs  rest_auth_lifecycle_test.rs  rest_auth_more_test.rs  rest_authz_more_test.rs  rest_authz_retry_test.rs  sensitive_redaction_test.rs  single_flight_refresh_test.rs  trybuild.rs
tests/ui/: conflicting_selectors.rs  conflicting_selectors.stderr  missing_action.rs  missing_action.stderr  non_async.rs  non_async.stderr
