# This crate is standalone — deliberately NOT a member of the root AXIAM
# Cargo workspace (edition 2021 here vs workspace edition 2024). The empty
# [workspace] table below opts it out of ancestor workspace discovery.
[workspace]

[package]
name = "axiam-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Official Rust client SDK for AXIAM IAM"
license = "Apache-2.0"
publish = true
repository = "https://github.com/ilpanich/axiam"
documentation = "https://docs.rs/axiam-sdk"
readme = "README.md"
# `cargo package`/`cargo publish` follow this `include` list, NOT
# `.gitignore` — the default (VCS-only) file set would otherwise exclude
# `src/gen/**`, since it is gitignored (16-01/D-09: generated gRPC stubs are
# never committed to the repo). This crate is not published `default-run`
# from a git worktree that regenerates `src/gen/` first (either via `cargo
# build --features grpc`, which runs `build.rs`, or via the CI publish job's
# buf-bundle step), the bundled stub file MUST ship inside the package
# tarball so crates.io consumers (who cannot run buf) get a self-contained,
# compilable crate (D-09). This list is additive to Cargo's built-in
# defaults for a package with no `exclude`, so ordinary source/doc/license
# files are still included automatically.
include = [
  "src/**",
  "build.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE",
]

[features]
default = ["rest", "grpc", "amqp"]
rest = ["dep:reqwest"]
grpc = ["dep:tonic", "dep:tonic-prost", "dep:prost"]
# `tracing` is a required (non-optional) dependency of `amqp`, not gated by
# `observability`: the CONTRACT.md §8.4 security-event log on HMAC
# verification failure is a mandatory correctness/security control (T-16-11),
# not optional diagnostic instrumentation, so it must always be emitted
# regardless of whether the crate-wide `observability` feature is enabled.
amqp = ["dep:lapin", "dep:hmac", "dep:sha2", "dep:hex", "dep:futures-util", "dep:tracing"]
observability = ["dep:tracing"]
# §10 middleware/route-guard: the Actix-Web `FromRequest` extractor
# (`AxiamUser`). Off by default so the core SDK does not pull actix-web
# unconditionally (D-02 modularity). Depends on `rest` for the shared
# `JwksVerifier` (broadened cfg gate in src/token/jwks.rs).
actix = ["dep:actix-web", "rest"]

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"], optional = true }
tonic = { version = "0.14", default-features = false, features = ["transport", "codegen", "tls-ring", "tls-native-roots"], optional = true }
tonic-prost = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
lapin = { version = "4", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
actix-web = { version = "4", optional = true }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
url = "2"
backon = "1"
tracing = { version = "0.1", optional = true }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
tokio-test = "0.4"
# Additive dev-only feature: `router` unlocks `Server::add_service` for the
# in-process tonic test server (tests/grpc_check_access_test.rs, SC#4). Never
# enabled for the published library build — Cargo unifies dev-dependency
# features only for `cargo test`/`cargo build --tests`, not for downstream
# consumers of the published crate.
tonic = { version = "0.14", default-features = false, features = ["router"] }

[package.metadata.docs.rs]
all-features = true

# Five per-capability examples (D-08) — the §1-§10 conformance demonstration
# referenced by the README. Each declares only the feature(s) it actually
# exercises so `cargo build --examples --features <subset>` only compiles
# the examples relevant to that subset.
[[example]]
name = "login_mfa"
required-features = ["rest"]

[[example]]
name = "rest_check_access"
required-features = ["rest"]

[[example]]
name = "grpc_check_access"
required-features = ["rest", "grpc"]

[[example]]
name = "amqp_consumer"
required-features = ["amqp"]

[[example]]
name = "actix_route_guard"
required-features = ["actix"]
