# Workspace root: this crate lives at the root of its own repository
# (github.com/ilpanich/axiam-rust-sdk). The explicit [workspace] table also
# stops Cargo from discovering an ancestor workspace if the repo is ever
# checked out inside one. The root package (`axiam-sdk`) is always a member;
# `members` additionally pulls in the proc-macro companion crate, which cannot
# live in a normal library crate (§11 declarative authorization helpers).
[workspace]
members = ["axiam-sdk-macros"]
resolver = "2"

[package]
name = "axiam-sdk"
version = "1.0.0-alpha10"
edition = "2024"
rust-version = "1.88"
description = "Official Rust client SDK for AXIAM IAM"
license = "Apache-2.0"
publish = true
repository = "https://github.com/ilpanich/axiam-rust-sdk"
homepage = "https://github.com/ilpanich/axiam-rust-sdk"
documentation = "https://docs.rs/axiam-sdk"
readme = "README.md"
keywords = ["iam", "authorization", "oauth2", "rbac", "sdk"]
categories = ["api-bindings", "authentication"]
# `cargo package`/`cargo publish` follow this `include` list, NOT `.gitignore`
# — the default (VCS-only) file set would otherwise exclude `src/gen/**`,
# since it is gitignored (D-09: generated gRPC stubs are never committed).
# Publishing always happens from a worktree that regenerates `src/gen/` first
# (via `cargo build --features grpc`, which runs `build.rs`, or via `buf
# generate`), and the resulting stubs MUST ship inside the package tarball:
# `proto/` is NOT included, so crates.io consumers — who have neither the
# protos nor protoc — need the pre-generated module to get a self-contained,
# compilable crate. This list is additive to Cargo's built-in defaults for a
# package with no `exclude`, so ordinary source/doc/license files are still
# included automatically.
include = [
  "src/**",
  "build.rs",
  "Cargo.toml",
  "README.md",
  "CONTRACT.md",
  "LICENSE",
]

[features]
default = ["rest", "grpc", "amqp"]
rest = ["dep:reqwest"]
grpc = ["dep:tonic", "dep:tonic-prost", "dep:prost"]
# `tracing` is a required (non-optional) dependency of `amqp`, not gated by
# `observability`: the CONTRACT.md §8.4 security-event log on HMAC
# verification failure is a mandatory correctness/security control (T-16-11),
# not optional diagnostic instrumentation, so it must always be emitted
# regardless of whether the crate-wide `observability` feature is enabled.
amqp = ["dep:lapin", "dep:hmac", "dep:sha2", "dep:hex", "dep:futures-util", "dep:tracing", "dep:chrono"]
observability = ["dep:tracing"]
# §10 middleware/route-guard: the Actix-Web `FromRequest` extractor
# (`AxiamUser`). Off by default so the core SDK does not pull actix-web
# unconditionally (D-02 modularity). Depends on `rest` for the shared
# `JwksVerifier` (broadened cfg gate in src/token/jwks.rs). Also pulls in
# `subtle` for the constant-time CSRF double-submit comparison (CSRF fix,
# see src/middleware/actix.rs) — `subtle` is already an unconditional
# transitive dependency via `jsonwebtoken` -> `ed25519-dalek`, so gating it
# here adds no new supply-chain surface; it only makes an already-vendored
# crate a direct dep for the code path that needs it.
actix = ["dep:actix-web", "dep:subtle", "rest"]
# §11 declarative authorization helpers: the `#[require_access]` /
# `#[require_auth]` / `#[require_role]` Actix-Web attribute macros, re-exported
# from `axiam_sdk` so users write `use axiam_sdk::require_access;`. Implies
# `actix` (the macros expand to the §10 `AxiamUser` extractor and the runtime
# guard in `middleware::authz`). The proc-macro crate is version-locked (`=`)
# to this crate: the expansion references `::axiam_sdk` runtime helpers, so the
# two must always ship together.
macros = ["dep:axiam-sdk-macros", "actix"]

[dependencies]
axiam-sdk-macros = { version = "=1.0.0-alpha10", path = "axiam-sdk-macros", optional = true }
tokio = { version = "1", features = ["sync", "rt", "macros", "time"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "cookies"], optional = true }
tonic = { version = "0.14", default-features = false, features = ["transport", "codegen", "tls-ring", "tls-native-roots"], optional = true }
tonic-prost = { version = "0.14", optional = true }
prost = { version = "0.14", optional = true }
lapin = { version = "4", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["std"], optional = true }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
hmac = { version = "0.13", optional = true }
sha2 = { version = "0.11", optional = true }
hex = { version = "0.4", optional = true }
# NEW-4 (v2 AMQP replay protection): `issued_at` is an RFC3339 UTC timestamp
# inside the signed body, parsed from the delivery's `serde_json::Value` for
# the freshness gate. `clock` brings in `Utc::now()`; `serde` is required for
# the `AuthzRequest`/`AuditEventMessage` DTO fields (mirrors the server's
# `chrono::DateTime<Utc>` field type in `crates/axiam-amqp/src/messages.rs`).
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"], optional = true }
actix-web = { version = "4", optional = true }
# Constant-time comparison for the CSRF double-submit check in
# `middleware::actix::csrf_valid`. See the `actix` feature comment above for
# why this adds no new supply-chain surface.
subtle = { version = "2", optional = true }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
# `preserve_order` (SDK-Q01): backs `serde_json::Value`'s object map with an
# insertion-ordered `IndexMap` instead of the default alphabetical `BTreeMap`.
# The AMQP consumer verifies HMACs by parsing the delivery body into a `Value`
# and re-serializing it (minus `hmac_signature`); the server signs the SAME
# bytes it emitted from a concrete struct in FIELD-DECLARATION order (e.g.
# AuthzRequest: correlation_id, tenant_id, subject_id, action, resource_id,
# scope, key_version — NOT alphabetical). Without this feature `Value` would
# re-serialize alphabetically, so the SDK would HMAC over different bytes than
# the server signed and reject every genuine message. With it, `Value`
# preserves the order the keys arrived in — which, because the server emits
# declaration order on the wire, reproduces the exact signed bytes.
serde_json = { version = "1", features = ["preserve_order"] }
uuid = { version = "1", features = ["serde", "v4"] }
url = "2"
backon = "1"
tracing = { version = "0.1", optional = true }

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
tokio-test = "0.4"
# Additive dev-only feature: `router` unlocks `Server::add_service` for the
# in-process tonic test server (tests/grpc_check_access_test.rs, SC#4). Never
# enabled for the published library build — Cargo unifies dev-dependency
# features only for `cargo test`/`cargo build --tests`, not for downstream
# consumers of the published crate.
tonic = { version = "0.14", default-features = false, features = ["router", "gzip"] }
# `trybuild` drives the compile-fail UI tests for the §11 attribute macros
# (tests/ui/*.rs): asserts that macro misuse (missing `action`, conflicting
# resource selectors, non-async fn) fails to compile with a clear message.
trybuild = "1"
# `rcgen` generates a throwaway test CA + client certificate/key at TEST TIME
# for the §6.1 mTLS tests (tests/mtls_client_cert_test.rs). This keeps private
# keys OUT of the repository — nothing is committed; every key is minted in
# the test process and dropped when it ends.
rcgen = "0.13"

[package.metadata.docs.rs]
all-features = true

[profile.release]
opt-level = 3         # Maximum optimization for speed.
lto = "fat"           # Whole-program LTO across all crates (== `true`); best
                      # runtime throughput, slowest link.
codegen-units = 1     # One codegen unit per crate — lets the optimizer see the
                      # whole crate at the cost of parallelism during compile.
strip = "symbols"     # Drop the symbol table to shrink the shipped binary. No
                      # runtime cost (release already builds with debug = 0).

# Five per-capability examples (D-08) — the §1-§10 conformance demonstration
# referenced by the README. Each declares only the feature(s) it actually
# exercises so `cargo build --examples --features <subset>` only compiles
# the examples relevant to that subset.
[[example]]
name = "login_mfa"
required-features = ["rest"]

[[example]]
name = "rest_check_access"
required-features = ["rest"]

[[example]]
name = "grpc_check_access"
required-features = ["rest", "grpc"]

[[example]]
name = "amqp_consumer"
required-features = ["amqp"]

[[example]]
name = "actix_route_guard"
required-features = ["actix", "macros"]
